[workspace]
resolver = "2"
members = [
    "examples/coinbase-example",
    "examples/coinbase-fix-utils",
    "examples/coinbase-fix42",
    "examples/coinbase-fix50-market-data",
    "examples/executor",
    "examples/single-order-sender",
    "quickfix-ffi",
    "quickfix-msg-gen",
    "quickfix-spec-parser",
    "quickfix",
    "quickfix-msg40",
    "quickfix-msg41",
    "quickfix-msg42",
    "quickfix-msg43",
    "quickfix-msg44",
]
