[workspace]
resolver = "2"
members = [
    # Package registered in order of publication.
    "quickfix-ffi",
    "quickfix",
    "quickfix-spec-parser",
    "quickfix-msg-gen",
    "quickfix-msg40",
    "quickfix-msg41",
    "quickfix-msg42",
    "quickfix-msg43",
    "quickfix-msg44",
    "quickfix-msg50", "quickfix-native",
]
