[package]
name = "quickfix-ffi"
version = "0.1.0"
authors = ["Arthur LE MOIGNE"]
edition = "2021"
description = "Low level binding to quickfix C++ library"
repository = "https://github.com/arthurlm/quickfix-rs"
license = "MIT"
keywords = ["quickfix", "fix-protocol", "finance"]
categories = ["external-ffi-bindings"]
exclude = ["examples"]

[dependencies]

[build-dependencies]
cmake = "0.1.50"
fs_extra = "1.3.0"

[features]
default = []
print-ex = []
build-with-mysql = []
build-with-postgres = []
