[package]
name = "quickfix-ffi"
version = "0.1.0"
authors = ["Arthur LE MOIGNE"]
edition = "2021"
description = "Low level binding to quickfix C++ library"
repository = "https://github.com/arthurlm/quickfix-rs"
license = "MIT"
keywords = ["quickfix", "fix-protocol", "finance"]
categories = ["external-ffi-bindings"]
rust-version = "1.70.0"
exclude = [
    "examples",
    "libquickfix/.github",
    "libquickfix/bin",
    "libquickfix/doc",
    "libquickfix/examples",
    "libquickfix/m4",
    "libquickfix/scripts",
    "libquickfix/src/python",
    "libquickfix/src/python3",
    "libquickfix/src/ruby",
    "libquickfix/src/sql",
    "libquickfix/src/swig",
    "libquickfix/src/at*",
    "libquickfix/test",
]

[dependencies]

[build-dependencies]
cmake = "0.1.50"
fs_extra = "1.3.0"

[features]
default = []
build-with-mysql = []
build-with-postgres = []
