[package]
name = "quickfix-spec-parser"
version = "0.1.4"
authors = ["Arthur LE MOIGNE"]
edition = "2021"
description = "FIX XML spec file parser / writer"
repository = "https://github.com/arthurlm/quickfix-rs"
license = "MIT OR Apache-1.1"
keywords = ["quickfix", "fix-protocol", "finance"]
categories = ["development-tools::build-utils"]
rust-version = "1.70.0"
exclude = ["examples"]

[dependencies]
bytes = "1.7.1"
quick-xml = "0.31.0"
thiserror = "1.0.63"
