[package]
name = "quickfix-spec-parser"
version = "0.1.5"
authors = ["Arthur LE MOIGNE"]
edition = "2021"
description = "FIX XML spec file parser / writer"
repository = "https://github.com/arthurlm/quickfix-rs"
license = "MIT OR Apache-1.1"
keywords = ["quickfix", "fix-protocol", "finance"]
categories = ["development-tools::build-utils"]
rust-version = "1.70.0"
exclude = ["examples"]

[dependencies]
bytes = "1.9.0"
quick-xml = "0.36.2"
thiserror = "1.0.69"
