[package]
name = "quickfix-spec-parser"
version = "0.2.0"
authors = ["Arthur LE MOIGNE"]
edition = "2021"
description = "FIX XML spec file parser / writer"
repository = "https://github.com/arthurlm/quickfix-rs"
license = "MIT OR Apache-1.1"
keywords = ["quickfix", "fix-protocol", "finance"]
categories = ["development-tools::build-utils"]
rust-version = "1.70.0"
exclude = ["examples"]

[dependencies]
quick-xml = "0.37.2"
thiserror = "2.0.11"
