[package]
name = "quickfix"
version = "0.1.0"
edition = "2021"

[dependencies]
quickfix-ffi = { path = "../quickfix-ffi" }
thiserror = "1.0.50"
log = { version = "0.4.20", optional = true }

[dev-dependencies]
colored = "2.0.4"

[features]
default = ["log"]
print-ex = ["quickfix-ffi/print-ex"]
build-with-mysql = ["quickfix-ffi/build-with-mysql"]
build-with-postgres = ["quickfix-ffi/build-with-postgres"]
log = ["dep:log"]
