[package]
name = "quickfix"
version = "0.1.2"
authors = ["Arthur LE MOIGNE"]
edition = "2021"
description = "High level binding to quickfix C++ library"
repository = "https://github.com/arthurlm/quickfix-rs"
license = "MIT OR Apache-1.1"
keywords = ["quickfix", "fix-protocol", "finance"]
categories = ["api-bindings", "finance"]
rust-version = "1.70.0"

[dependencies]
quickfix-ffi = { path = "../quickfix-ffi", version = "0.1.0" }
thiserror = "1.0.50"
log = { version = "0.4.20", optional = true }

[dev-dependencies]
colored = "2.0.4"

[features]
default = ["log"]
build-with-mysql = ["quickfix-ffi/build-with-mysql"]
build-with-postgres = ["quickfix-ffi/build-with-postgres"]
log = ["dep:log"]
