[package]
name = "coinbase-example"
version = "0.1.2"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.79"
coinbase-fix42 = { path = "../coinbase-fix42", version = "0.1.0" }
coinbase-fix-utils = { path = "../coinbase-fix-utils", version = "0.1.0" }
quickfix = { path = "../../quickfix", version = "0.1.0" }
uuid = { version = "1.6.1", features = ["v4"] }
parking_lot = "0.12.1"
