[package]
name = "coinbase-example"
version = "0.2.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.95"
coinbase-fix42-order-entry = { path = "../coinbase-fix42-order-entry", version = "0.2.0" }
coinbase-fix-utils = { path = "../coinbase-fix-utils", version = "0.2.0" }
quickfix = { path = "../../quickfix", version = "0.2.0" }
uuid = { version = "1.11.0", features = ["v4"] }
parking_lot = "0.12.3"
