[package]
name = "single-order-sender"
version = "0.1.5"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
parking_lot = "0.12.3"
quickfix = { path = "../../quickfix", version = "0.1.0" }
quickfix-msg44 = { path = "../../quickfix-msg44", version = "0.1.0" }
uuid = "1.11.0"
